--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>git test</p>
+    <table id="table">
+        <tr>
+            <td id="td1"></td>
+            <td id="td2"></td>
+            <td id="td3"></td>
+        </tr>
+        <tr>
+            <td id="td4"></td>
+            <td id="td5"></td>
+            <td id="td6"></td>
+        </tr>
+        <tr>
+            <td id="td7"></td>
+            <td id="td8"></td>
+            <td id="td9"></td>
+        </tr>
+    </table>
     <script src="app.js"></script>
 </body>
 </html>
